--- a/pages/info-producto.html
+++ b/pages/info-producto.html
@@ -180,6 +180,33 @@
             </div>
         </div>
     </main>
+    <div class="chat-ayuda">
+        <div data-aos="fade-down">
+            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                <img src="../multimedia/img/Group 175.png" alt="">
+            </button>
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="staticBackdropLabel">Contactanos por WhatsApp</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Escribenos tus dudas
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Descargar WhatsApp</button>
+                            <button type="button" class="btn btn-primary">Abrir en el ordenador</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
     <footer class="mx-auto">
         <div class="container d-md-flex">
             <div class="columna1 col-md-6 d-flex justify-content-center col-12">
