--- a/pages/productos.html
+++ b/pages/productos.html
@@ -67,7 +67,7 @@
                     <img src="../multimedia/img/carrito-movil.png" alt="">
                 </button>
             </div>
-        </div >
+        </div>
         <div class="d-md-none navegador-boton-busqueda ">
             <button type="button" class="btn border navegador-boton-busqueda-imagen"
                 style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
@@ -81,6 +81,31 @@
 
 
     <main>
+        <div class="filtros container mt-4 ">
+            <div class="btn-group border border-secondary mx-4">
+                <button class="btn btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Disponibles
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Grano</a></li>
+                    <li><a class="dropdown-item" href="#">Molido</a></li>
+                </ul>
+            </div>
+            <div class="btn-group border border-secondary">
+                <button class="btn btn-sm" type="button">
+                    Precio
+                </button>
+                <button type="button" class="btn btn-sm dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <span class="visually-hidden">Toggle Dropdown</span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Ascendente</a></li>
+                    <li><a class="dropdown-item" href="#">Decendente</a></li>
+                </ul>
+            </div>
+        </div>
         <div class="contenedor-tarjetamaestra container px-0">
             <div class="contenedor-tarjeta-producto">
                 <div class=" col-12 col-md-3 p-2">
@@ -91,7 +116,8 @@
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café Robusta</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Grano</p>
-                            <p class="tarjeta-producto-texto mb-0">El otro gran café no es otro que el Robusta, perteneciente a
+                            <p class="tarjeta-producto-texto mb-0">El otro gran café no es otro que el Robusta,
+                                perteneciente a
                                 la República Democrática del Congo. Este cafeto se distingue principalmente por la mayor
                                 resistencia de las semillas, que permite su cultivo en un mayor abanico de terrenos: el
                                 cafeto Robusta puede cultivarse a partir de altitudes de solo 200 metros sobre el nivel
@@ -118,7 +144,8 @@
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café Java</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Grano</p>
-                            <p class="tarjeta-producto-texto mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII,
+                            <p class="tarjeta-producto-texto mb-0">Café arábica, el Java apareció en Indonesia, en el
+                                siglo XVII,
                                 cuando el país aún era una colonia holandesa. El particular clima y suelo del país da al
                                 café unas características muy marcadas, con una semilla que destaca por su fuerte sabor,
                                 con toques picantes y que deja una sensación de dulzor en el paladar.</p>
@@ -144,7 +171,8 @@
                         <div>
                             <p class="tarjeta-producto-titulo  mb-0">Café arábica</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Grano</p>
-                            <p class="tarjeta-producto-texto mb-0">La planta de café arábica es uno de los dos principales
+                            <p class="tarjeta-producto-texto mb-0">La planta de café arábica es uno de los dos
+                                principales
                                 cafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen
                                 en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades
                                 tienes de llevarte a los labios siempre que te tomes una taza.</p>
@@ -170,7 +198,8 @@
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café Tarrazú</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Grano</p>
-                            <p class="tarjeta-producto-texto mb-0">Tarrazú es otro de los tipos de café en grano. Es otra
+                            <p class="tarjeta-producto-texto mb-0">Tarrazú es otro de los tipos de café en grano. Es
+                                otra
                                 variedad arábica y tiene su origen en la zona montañosa y volcánica de Costa Rica,
                                 siendo una de las más apreciadas por los expertos cafeteros. Se trata de un café
                                 ligeramente ácido y con sabor parecido al del chocolate.</p>
@@ -196,7 +225,8 @@
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café Robusta</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Molido</p>
-                            <p class="tarjeta-producto-texto mb-0">El otro gran café no es otro que el Robusta, perteneciente a
+                            <p class="tarjeta-producto-texto mb-0">El otro gran café no es otro que el Robusta,
+                                perteneciente a
                                 la República Democrática del Congo. Este cafeto se distingue principalmente por la mayor
                                 resistencia de las semillas, que permite su cultivo en un mayor abanico de terrenos: el
                                 cafeto Robusta puede cultivarse a partir de altitudes de solo 200 metros sobre el nivel
@@ -223,7 +253,8 @@
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café Java</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Molido</p>
-                            <p class="tarjeta-producto-texto mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII,
+                            <p class="tarjeta-producto-texto mb-0">Café arábica, el Java apareció en Indonesia, en el
+                                siglo XVII,
                                 cuando el país aún era una colonia holandesa. El particular clima y suelo del país da al
                                 café unas características muy marcadas, con una semilla que destaca por su fuerte sabor,
                                 con toques picantes y que deja una sensación de dulzor en el paladar.</p>
@@ -249,7 +280,8 @@
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café arábica</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Molido</p>
-                            <p class="tarjeta-producto-texto mb-0">La planta de café arábica es uno de los dos principales
+                            <p class="tarjeta-producto-texto mb-0">La planta de café arábica es uno de los dos
+                                principales
                                 cafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen
                                 en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades
                                 tienes de llevarte a los labios siempre que te tomes una taza.</p>
@@ -275,7 +307,8 @@
                         <div>
                             <p class="tarjeta-producto-titulo mb-0">Café Tarrazú</p>
                             <p class="titulo-principal-tarjeta-clase">Tipo: Molido</p>
-                            <p class="tarjeta-producto-texto mb-0">Tarrazú es otro de los tipos de café en grano. Es otra
+                            <p class="tarjeta-producto-texto mb-0">Tarrazú es otro de los tipos de café en grano. Es
+                                otra
                                 variedad arábica y tiene su origen en la zona montañosa y volcánica de Costa Rica,
                                 siendo una de las más apreciadas por los expertos cafeteros. Se trata de un café
                                 ligeramente ácido y con sabor parecido al del chocolate.</p>
@@ -313,7 +346,8 @@
                                 Escribenos tus dudas
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Descargar WhatsApp</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Descargar
+                                    WhatsApp</button>
                                 <button type="button" class="btn btn-primary">Abrir en el ordenador</button>
                             </div>
                         </div>
@@ -337,10 +371,10 @@
                     <div class="input-group">
                         <span class="input-group-text">Suscribirse</span>
                         <div class="form-floating">
-                          <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
-                          <label for="floatingInputGroup1">Email</label>
+                            <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+                            <label for="floatingInputGroup1">Email</label>
                         </div>
-                      </div>
+                    </div>
                 </div>
             </div>
             <div class="columna2 col-md-6 col-12">
@@ -357,7 +391,7 @@
                 </div>
             </div>
         </div>
-            </footer>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
